# FaceAnalysisLite

./: CMakeLists.txt  README.md  run_full.sh  run_processCam.sh  temp.sh
data/: settings.ini  settings.ini~
exe/faceSub/: CMakeLists.txt  faceSub.cpp
exe/launchClient/: CMakeLists.txt  launchClient.cpp
exe/launchServer/: CMakeLists.txt  launchServer.cpp  launcher.cpp  settings.ini
exe/processCam/: CMakeLists.txt  CMakeLists.txt~  ferLocalFunctions.cpp  processCam.cpp  settings.ini  settings.ini~  utilsProcessCam.cpp  utilsProcessCam.h
exe/processCam/data/params_pain/: config.txt~  paramsPatchCoords.csv~
exe/processCam/data/params_pain/patchFeats/: patchFeats_1.csv
exe/processCam/data/params_pain/trees/: tree_1.csv  tree_100.csv  tree_12.csv  tree_13.csv  tree_14.csv  tree_15.csv  tree_16.csv  tree_17.csv  tree_18.csv  tree_19.csv  tree_2.csv  tree_23.csv  tree_24.csv  tree_25.csv  tree_26.csv  tree_28.csv  tree_29.csv  tree_30.csv  tree_32.csv  tree_33.csv  tree_35.csv  tree_41.csv  tree_43.csv  tree_47.csv  tree_49.csv  tree_50.csv  tree_51.csv  tree_55.csv  tree_56.csv  tree_59.csv  tree_60.csv  tree_61.csv  tree_64.csv  tree_65.csv  tree_70.csv  tree_71.csv  tree_72.csv  tree_73.csv  tree_76.csv  tree_79.csv  (+13 more)
exe/processCam/data/params_valence/trees/: tree_100.csv  tree_13.csv  tree_16.csv  tree_18.csv  tree_19.csv  tree_22.csv  tree_23.csv  tree_31.csv  tree_32.csv  tree_34.csv  tree_35.csv  tree_38.csv  tree_39.csv  tree_40.csv  tree_42.csv  tree_44.csv  tree_45.csv  tree_47.csv  tree_49.csv  tree_5.csv  tree_52.csv  tree_54.csv  tree_56.csv  tree_61.csv  tree_62.csv  tree_63.csv  tree_64.csv  tree_67.csv  tree_70.csv  tree_71.csv  tree_72.csv  tree_74.csv  tree_78.csv  tree_80.csv  tree_85.csv  tree_9.csv  tree_91.csv  tree_92.csv  tree_93.csv  tree_94.csv  (+2 more)
exe/processPub/: CMakeLists.txt  processPub.cpp
exe/processSub/: CMakeLists.txt  ferLocalFunctions.cpp  ferLocalFunctions.h  processSub.cpp  settings.ini  utilsProcessSub.cpp  utilsProcessSub.h
exe/processSub/data/params_pain/: config.txt
exe/processSub/data/params_pain/trees/: tree_10.csv  tree_11.csv  tree_20.csv  tree_21.csv  tree_22.csv  tree_27.csv  tree_3.csv  tree_31.csv  tree_34.csv  tree_36.csv  tree_37.csv  tree_38.csv  tree_39.csv  tree_4.csv  tree_40.csv  tree_42.csv  tree_44.csv  tree_45.csv  tree_46.csv  tree_48.csv  tree_5.csv  tree_52.csv  tree_53.csv  tree_54.csv  tree_57.csv  tree_58.csv  tree_6.csv  tree_62.csv  tree_63.csv  tree_66.csv  tree_67.csv  tree_68.csv  tree_69.csv  tree_7.csv  tree_74.csv  tree_75.csv  tree_77.csv  tree_78.csv  tree_80.csv  tree_83.csv  (+7 more)
exe/processSub/data/params_valence/trees/: tree_1.csv  tree_10.csv  tree_11.csv  tree_12.csv  tree_14.csv  tree_15.csv  tree_17.csv  tree_2.csv  tree_20.csv  tree_21.csv  tree_24.csv  tree_25.csv  tree_26.csv  tree_27.csv  tree_28.csv  tree_29.csv  tree_3.csv  tree_30.csv  tree_33.csv  tree_36.csv  tree_37.csv  tree_4.csv  tree_41.csv  tree_43.csv  tree_46.csv  tree_48.csv  tree_50.csv  tree_51.csv  tree_53.csv  tree_55.csv  tree_57.csv  tree_58.csv  tree_59.csv  tree_6.csv  tree_60.csv  tree_65.csv  tree_66.csv  tree_68.csv  tree_69.csv  tree_7.csv  (+18 more)
exe/temp/: CMakeLists.txt  faceSub.cpp
exe/temp/launchClient/: CMakeLists.txt  launchClient.cpp
exe/usmSub/: CMakeLists.txt  usmSub.cpp
lib/local/LandmarkDetector/include/: LandmarkDetectorUtils.h
lib/local/LandmarkDetector/src/: LandmarkDetectorModel.cpp  LandmarkDetectorUtils.cpp  Patch_experts.cpp
